--- a/config-example.yaml
+++ b/config-example.yaml
@@ -32,4 +32,5 @@ logging:
   log_maxfilesrotation: 7
   log_stdout: false
 kafka_server: "127.0.0.1:9092"
-share_topic: "chia_share_topic"
+share_topic: "share_chia"
+farmer_topic: "farmer_topic"
