--- a/config-example.yaml
+++ b/config-example.yaml
@@ -35,3 +35,9 @@ logging:
 kafka_server: "127.0.0.1:9092"
 share_topic: "share_chia"
 farmer_topic: "farmer_chia"
+server:
+  server_host: 0.0.0.0
+  server_port: 8082
+  server_use_ssl: false
+  server_ssl_crt: config/ssl/domain/domain_srv.crt
+  server_ssl_key: config/ssl/domain/domain_srv.key
