--- a/config-example.yaml
+++ b/config-example.yaml
@@ -40,3 +40,4 @@ server:
   server_use_ssl: false
   server_ssl_crt: config/ssl/domain/domain_srv.crt
   server_ssl_key: config/ssl/domain/domain_srv.key
+dev_mode: true
