修复获取farmer记录的bug

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ setuptools~=56.1.0
 aiosqlite~=0.17.0
 aiohttp~=3.7.4
 pytest==6.2.4
-kafka-python=2.0.2
+kafka-python==2.0.2
 protobuf==3.17.3
 PyMySQL==1.0.2
 DBUtils==2.0.2
