--- a/config-example.yaml
+++ b/config-example.yaml
@@ -44,3 +44,9 @@ dev_mode: true
 redis_server: "127.0.0.1"
 redis_port: 6379
 redis_passwd: "1234"
+db_host: "127.0.0.1"
+db_port: 3306
+db_user: "root"
+db_passwd: "1234"
+db_name: "local"
+
